--- a/web/styles.css
+++ b/web/styles.css
@@ -1,9 +1,12 @@
 .availability{
-    width: 50px;
-    height: 100px;
     float: right;
 }
 
-h1{
-    color: honeydew;
+.application{
+    width: 100;
+    height: 200;
+    float: left;
+}
+body{
+    background-color: honeydew;
 }
